--- a/scss/_myself.scss
+++ b/scss/_myself.scss
@@ -174,7 +174,6 @@
             padding-left: 15px;
             font-size: 15px;
             color: #ffffff;
-            font-weight: bold;
         }
 
         span {
@@ -784,8 +783,9 @@
             }
 
             &:hover,&:active,&.active {
-                background: #fff;
-                color: #505050;
+                border-color: #aef156;
+                background: linear-gradient(to right, #92e820 0%, #46dd16 100%);
+                color: #272727;
             }
         }
         .rowbutMes {
@@ -901,8 +901,9 @@
                     color: #dddddd;
 
                     &:hover,&:active,&.active {
-                        background: #fff;
-                        color: #000;
+                        border-color: #aef156;
+                        background: linear-gradient(to right, #92e820 0%, #46dd16 100%);
+                        color: #272727;
                     }
                 }
             }
@@ -985,9 +986,9 @@
             }
 
             &:hover,&:active,&.active {
-                background: #fff;
-                border-color: #505050;
-                color: #505050;
+                border-color: #aef156;
+                background: linear-gradient(to right, #92e820 0%, #46dd16 100%);
+                color: #272727;
             }
 
             &.none {
@@ -1181,11 +1182,11 @@
 //修改密碼
 .changePasswordWindow {
     display: none;
-    position: absolute;
+    position: fixed;
     width: 350px;
     height: auto;
     left: 50%;
-    top: 50%;
+    top: 20%;
     transform: translate(-50%,-50%);
     z-index: 20;
     box-shadow: 0px 0px 10px 2px #517b09;
@@ -1329,7 +1330,7 @@
 //無註冊信用卡提醒
 .cardremind {
     display: none;
-    position: absolute;
+    position: fixed;
     width: 500px;
     height: auto;
     left: 50%;
